# minimal-notebook

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
